# axvisor_api

./: Cargo.toml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  release-check.yml
axvisor_api/: all.html  attr.api_def.html  attr.api_impl.html  attr.api_mod.html  attr.api_mod_impl.html  index.html  sidebar-items.js
axvisor_api/arch/: index.html  sidebar-items.js  trait.ArchIf.html
axvisor_api/host/: fn.get_host_cpu_num.html  index.html  sidebar-items.js  trait.HostIf.html
axvisor_api/memory/: fn.alloc_contiguous_frames.html  fn.alloc_frame.html  fn.dealloc_contiguous_frames.html  fn.dealloc_frame.html  fn.phys_to_virt.html  fn.virt_to_phys.html  index.html  sidebar-items.js  struct.PhysAddr.html  struct.VirtAddr.html  trait.MemoryIf.html  type.PhysFrame.html
axvisor_api/time/: fn.cancel_timer.html  fn.current_ticks.html  fn.current_time.html  fn.current_time_nanos.html  fn.nanos_to_ticks.html  fn.register_timer.html  fn.ticks_to_nanos.html  fn.ticks_to_time.html  fn.time_to_ticks.html  index.html  sidebar-items.js  trait.TimeIf.html  type.CancelToken.html  type.Nanos.html  type.Ticks.html  type.TimeValue.html
axvisor_api/vmm/: fn.active_vcpus.html  fn.current_vcpu_id.html  fn.current_vm_active_vcpus.html  fn.current_vm_id.html  fn.current_vm_vcpu_num.html  fn.inject_interrupt.html  fn.notify_vcpu_timer_expired.html  fn.vcpu_num.html  index.html  sidebar-items.js  trait.VmmIf.html  (+3 more)
axvisor_api_proc/: Cargo.toml
axvisor_api_proc/src/: lib.rs
src/: arch.rs  host.rs  lib.rs  memory.rs  test.rs  time.rs  vmm.rs
(+9 files in other folders)
