[workspace]
members = [
  "axvisor_api_proc",
]
resolver = "2"

[workspace.package]
authors = ["Su Mingxian <aarkegz@gmail.com>"] 
edition = "2024" 
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0" # MulanPubL2 is not included in SPDX
repository = "https://github.com/arceos-hypervisor/axvisor_api" 

[package]
authors.workspace = true
categories = ["embedded", "no-std"]
description = "Basic API for components of the Hypervisor on ArceOS"
edition.workspace = true
keywords = ["axvisor", "api", "embedded"]
license.workspace = true
name = "axvisor_api"
repository.workspace = true
version = "0.1.0"

[dependencies]
axvisor_api_proc = {path = "axvisor_api_proc", version = "0.1.0"}

axaddrspace = "0.2.0"
crate_interface = "0.1"
memory_addr = "0.4"
