[package]
name = "axvisor_api_proc"
version = "0.2.0"
description = "Procedural macros for the `axvisor_api` crate"
documentation = "https://docs.rs/axvisor_api_proc"
readme = "README.md"
keywords = ["axvisor", "api", "embedded", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
# 过程宏辅助工具
proc-macro2 = "1.0"
# crate 名称查找
proc-macro-crate = "3.1.0"
# 代码生成
quote = "1.0"
# Rust 语法解析
syn = { version = "2.0", features = ["full"] }